# tic_tac_toe_bitboard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: greetings.yml
assets/: output.mov
src/tic_tac_toe_bitboard/: bitboard.py
src/tictactoe_ai/: __main__.py  tictactoe_ai.py
