[project]
name = "tictactoe-ai"
version = "0.1.0"
description = "Tic Tac Toe game with AI"
authors = [
    {name = "Sy Tran Dung", email = "sytrancsvn@gmail.com"},
    {name = "\"Sy Tran Dung\"", email = "sytrancsvn@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
tictactoe = "tictactoe_ai.__main__:main"

[project.optional-dependencies]
windows = ["windows-curses"]

[tool.pdm]
distribution = true
